<resources>
    <string name="app_name">Joke Norris</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_joke">Joke</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>

    <string name="label_random_joke">Random Joke</string>
    <string name="label_name_joke">Name Joke</string>
    <string name="label_category_joke">Category Joke</string>
    <string name="label_blank" />
    <string name="label_go">Go</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_helper_text">(no special characters)</string>
    <string name="label_float_text_alt_last">Last Name</string>
    <string name="label_float_text_alt_first">First Name</string>
</resources>
